# video-keyframe-detector

./: .gitignore  LICENSE  README.md  cli.py  keyframeDetector.py  pyproject.toml  readme.md  requirements.txt  setup.py  utils.py
KeyFrameDetector/: cli.py  key_frame_detector.py  utils.py
