[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-keyframe-detector"
version = "0.1.0"
description = "It is a simple python tool to extract key-frames from a video"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
  { name = "Joel Ibaceta", email = "mail@joelibaceta.com" }
]
dependencies = [
  "numpy>=2.3.0,<3.0.0",
  "opencv-python>=4.11.0.86,<5.0.0",
  "peakutils>=1.3.5,<2.0.0",
  "matplotlib>=3.10.3,<4.0.0",
  "pillow>=11.2.1,<12.0.0"
]

[project.scripts]
video-keyframe-detector = "cli:main"

[project.urls]
Homepage = "https://github.com/joelibaceta/video-keyframe-detector"